# twitchbot

./: .coveragerc  .gitattributes  .gitignore  .markdownlint.json  README.md  README_ja.md  pyproject.toml  requirements.txt  setup_tokens.py  setup_tokens.spec  twitchbot.ini.example  twitchbot.py  twitchbot.spec
.github/: copilot-instructions.md
.github/skills/cache-inflight/: SKILL.md
.github/skills/chat-events-flow/: SKILL.md
.github/skills/code-generator/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/component-spec/: SKILL.md
.github/skills/config-loader-spec/: SKILL.md
.github/skills/event-naming-rules/: SKILL.md
.github/skills/future-implementation/: SKILL.md
.github/skills/google-cloud-api-auth/: SKILL.md
.github/skills/google-cloud-api-exception/: SKILL.md
.github/skills/gui-design/: SKILL.md
.github/skills/interface-spec/: SKILL.md
.github/skills/manager-common/: SKILL.md
.github/skills/naming-rules/: SKILL.md
.github/skills/onnx-runtime-setting/: SKILL.md
.github/skills/refactoring-policy/: SKILL.md
.github/skills/stt-service/: SKILL.md
.github/skills/test-code-generator/: SKILL.md
.github/skills/translation-engine-spec/: SKILL.md
.github/skills/translation-manager/: SKILL.md
.github/skills/tts-engine-spec/: SKILL.md
.github/skills/tts-manager/: SKILL.md
.github/skills/twitch-auth-flow/: SKILL.md
.github/skills/twitchio-api-additional-notes/: SKILL.md
.github/skills/unit-test/: SKILL.md
.github/skills/windows-workflow/: SKILL.md
config/: __init__.py  loader.py
core/: __init__.py  bot.py  shared_data.py  token_manager.py  token_storage.py  version.py
core/cache/: __init__.py  cache_manager.py  inflight_manager.py  manager.py
core/components/: __init__.py  base.py  cache_component.py  chat_events.py  command.py  inflight_component.py  stt_component.py  time_signal.py  trans_component.py  tts_component.py
core/components/removable/: __init__.py  time_signal.py
core/gui/: __init__.py  gui_app.py  gui_logging_handler.py
core/stt/: __init__.py  interface.py  manager.py  processor.py  recorder.py  stt_location_model_loader.py  stt_manager.py
core/stt/engines/: google_cloud_speech_to_text.py  google_cloud_speech_to_text_v2.py
core/stt/vad/: __init__.py  interface.py  level.py  silero_onnx.py  vad_interface.py
core/trans/: __init__.py  interface.py  manager.py  trans_manager.py
core/trans/engines/: __init__.py  async_google_translate.py  const_google.py  trans_deepl.py  trans_google.py  trans_google_cloud.py
core/tts/: __init__.py  _tts_process_mixin.py  audio_playback_manager.py  file_manager.py  interface.py  manager.py  parameter_manager.py  synthesis_manager.py  text_preprocessor.py  tts_interface.py  tts_manager.py
core/tts/engines/: __init__.py  bouyomichan.py  cevio_ai.py  cevio_core.py  cevio_cs7.py  coeiroink.py  coeiroink_v2.py  g_tts.py  voicevox.py  vv_core.py
data/stt/: google-cloud-stt-v2_supported-languages.txt
data/stt/silero/: Place the silero_vad.onnx file here.txt
dic/: romaji_dict.json  stt_result_ignore_words.dic  user.dic
docs/: CONFIGURATION_en.md  CONFIGURATION_ja.md  PROJECT_STRUCTURE.md  VOICE_SETTINGS_en.md  VOICE_SETTINGS_ja.md
handlers/: __init__.py  async_comm.py  chat_message.py  fragment_handler.py  katakana.py  message_formatter.py
models/: __init__.py  cache_models.py  coeiroink_v2_models.py  config_models.py  message_models.py  re_models.py  translation_models.py  voice_models.py  voicevox_models.py
src/: __init__.py  _config.py  _version.py  setup_tokens.py  twitchbot.py  version.py
src/config/: loader.py
src/core/: bot.py  shared_data.py  token_manager.py  token_storage.py  version.py
src/core/cache/: __init__.py  cache_manager.py  inflight_manager.py
src/core/components/: __init__.py  base.py  cache_component.py  chat_events.py  command.py  inflight_component.py  stt_component.py  trans_component.py  tts_component.py
src/core/gui/: gui_app.py  gui_logging_handler.py
src/core/stt/: __init__.py  recorder.py  stt_interface.py  stt_location_model_loader.py  stt_manager.py
src/core/trans/: trans_interface.py  trans_manager.py
src/core/tts/: _tts_engine_config.py  _tts_process_mixin.py  audio_playback_manager.py  parameter_manager.py  synthesis_manager.py  text_preprocessor.py  tts_interface.py  tts_manager.py
src/handlers/: __init__.py  async_comm.py  chat_message.py  emoji.py  fragment_handler.py  katakana.py  message_formatter.py
src/models/: __init__.py  coeiroink_v2_models.py  config_models.py  message_models.py  re_models.py  translation_models.py  voice_models.py  voicevox_models.py
src/utils/: excludable_queue.py  file_utils.py  logger_utils.py
tests/: test_audio_playback_manager.py  test_bot.py  test_cache_manager.py  test_excludable_queue.py  test_gui_implementation.py  test_katakana.py  test_synthesis_manager.py  test_token_manager.py  test_token_manager_additional.py  test_token_storage.py
tests/config/: test_loader.py
tests/core/: test_bot.py  test_token_manager.py
tests/core/cache/: __init__.py  test_cache_manager.py  test_inflight_manager.py
tests/core/components/: test_cache_component.py  test_chat_events.py  test_command.py  test_stt_component.py  test_time_signal.py  test_trans_component.py  test_tts_component.py
tests/core/gui/: test_gui_app.py  test_gui_implementation.py  test_gui_logging.py  test_gui_logging_handler.py
tests/core/stt/: test_google_cloud_speech_to_text.py  test_google_cloud_speech_to_text_v2.py  test_processor.py  test_recorder.py  test_silero_onnx_vad.py  test_stt_manager.py
tests/core/trans/: test_trans_manager.py
tests/handlers/: __init__.py  test_async_http_request.py  test_async_http_session.py  test_async_socket.py  test_fragment_handler.py  test_katakana.py
tests/models/: test_message_models.py
tests/utils/: test_gui_app.py  test_gui_implementation.py  test_gui_logging.py
utils/: __init__.py  cache_utils.py  chat_utils.py  excludable_queue.py  file_utils.py  gui_app.py  gui_logging_handler.py  logger_utils.py  string_utils.py  time_utils.py  tts_utils.py
(+42 files in other folders)
