[project]
name = "twitchbot"
version = "1.8.5-beta"
description = "A Twitch chatbot built with Python, designed to enhance viewer engagement and provide interactive features for Twitch streamers."
authors = [{ name = "Allisa_yt" }]
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "altgraph==0.17.5",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    # click==8.1.8
    "colorama==0.4.6",
    "coverage==7.13.5",
    "cryptography==46.0.7",
    "dataclasses-json==0.6.7",
    "deepl==1.30.0",
    "emoji==2.15.0",
    "flatbuffers==25.12.19",
    "frozenlist==1.8.0",
    "google-api-core==2.30.2",
    "google-api-python-client==2.193.0",
    "google-api-python-client-stubs==1.34.0",
    "google-auth==2.49.1",
    "google-auth-httplib2==0.3.1",
    "google-cloud-core==2.5.1",
    "google-cloud-speech==2.38.0",
    "google-cloud-translate==3.25.0",
    "googleapis-common-protos==1.74.0",
    "grpc-google-iam-v1==0.14.4",
    "grpcio==1.80.0",
    "grpcio-status==1.80.0",
    "gTTS==2.5.4",
    "h11==0.16.0",
    "httplib2==0.31.2",
    "idna==3.11",
    "iniconfig==2.3.0",
    "librt==0.8.1",
    # marshmallow==3.26.2
    # mpmath==1.3.0
    "multidict==6.7.1",
    "mypy==1.20.0",
    "mypy_extensions==1.1.0",
    "numpy==2.4.4",
    "onnxruntime==1.24.4",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pefile==2024.8.26",
    "pluggy==1.6.0",
    "propcache==0.4.1",
    "proto-plus==1.27.2",
    # protobuf==6.33.6
    "pyasn1==0.6.3",
    "pyasn1_modules==0.4.2",
    "pycparser==3.0",
    "Pygments==2.20.0",
    "pyinstaller==6.19.0",
    "pyinstaller-hooks-contrib==2026.4",
    "pyparsing==3.3.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pywin32; platform_system == 'Windows'",
    "pywin32-ctypes==0.2.3",
    "requests==2.33.1",
    "ruff==0.15.9",
    "setuptools==82.0.1",
    "sounddevice==0.5.5",
    "soundfile==0.13.1",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "twitchio==3.2.1",
    "types-cffi==2.0.0.20260402",
    "types-dataclasses-json==0.5.9",
    "types-grpcio==1.0.0.20251009",
    "types-grpcio-status==1.0.0.20260402",
    "types-httplib2==0.31.2.20260402",
    "types-pyasn1==0.6.0.20260402",
    "types-pywin32==311.0.0.20260402",
    "types-PyYAML==6.0.12.20250915",
    "types-requests==2.33.0.20260402",
    "types-setuptools==82.0.0.20260402",
    "typing-inspect==0.9.0",
    "typing_extensions==4.15.0",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "uvicorn==0.44.0",
    "yarl==1.23.0",
]

[project.scripts]
twitchbot = "twitchbot:run_main"
setup_tokens = "setup_tokens:run_main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["twitchbot", "setup_tokens"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
src = ["src", "tests"]

# Excluded directories and files
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    ".github",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    ".coveragerc",
]

# Formatter Settings
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "ERA001",
    "T201",
    "FBT003",
    "PLR0913",
    "PLR2004",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF100",
    "E741",
    "COM812",
    "TD002",
    "TD003",
    "FIX002",
    "TRY301",
    "TRY400",
    "S101",
    "S105",
    "UP036",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
extend-per-file-ignores = { "tests/**/*" = [
    "INP001",
    "S106",
    "S108",
    "SLF001",
] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = "src"
files = ["src"]
python_version = "3.13"
exclude = ["dic/.*", "tests/.*"]
explicit_package_bases = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = false
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "soundfile.*",
    "sounddevice.*",
    "gtts.*",
    "google.cloud.*",
    "onnxruntime.*",
]
ignore_missing_imports = true
# follow_untyped_imports = true
# follow_imports = "silent"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning",
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]

[tool.coverage.run]
source = ["core", "handlers", "utils", "config", "models"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/site-packages/*",
    "twitchbot.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pylance]
exclude = [
    "**/.*",
    "**/.venv/**",
    "**/site-packages/**",
    "**/__pycache__/**",
    "**/node_modules/**",
    "**/dist/**",
    "**/build/**",
    "**/lib/**",
]

typeCheckingMode = "basic"

reportUnusedImport = true
reportUnusedVariable = true
reportGeneralTypeIssues = true

reportMissingImports = true
reportDuplicateImport = true

extraPaths = ["."]
