[project]
name = "twitchbot"
version = "2026.4" # unused
description = "A Twitch chatbot built with Python, designed to enhance viewer engagement and provide interactive features for Twitch streamers."
authors = [{ name = "Allisa_yt" }]
requires-python = ">=3.14"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "aiohttp==3.13.5",
    "dataclasses-json==0.6.7",
    "deepl==1.30.0",
    "emoji==2.15.0",
    "google-api-python-client-stubs==1.35.0",
    "google-cloud-speech==2.38.0",
    "google-cloud-translate==3.26.0",
    "gTTS==2.5.4",
    "numpy==2.4.4",
    "onnxruntime==1.24.4",
    "pywin32; platform_system == 'Windows'",
    "pywin32-ctypes==0.2.3; platform_system == 'Windows'",
    "sounddevice==0.5.5",
    "soundfile==0.13.1",
    "twitchio[starlette]==3.2.2",
    "types-cffi==2.0.0.20260408",
    "types-dataclasses-json==0.5.9",
    "types-grpcio==1.0.0.20260408",
    "types-grpcio-status==1.0.0.20260408",
    "types-httplib2==0.31.2.20260408",
    "types-pyasn1==0.6.0.20260408",
    "types-pywin32==311.0.0.20260408; platform_system == 'Windows'",
    "types-PyYAML==6.0.12.20260408",
    "types-requests==2.33.0.20260408",
    "types-setuptools==82.0.0.20260408",
    "typing-inspect==0.9.0",
    "typing_extensions==4.15.0",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.39.3",
    "coverage>=7.13.5",
    "mypy==1.20.1",
    "mypy_extensions==1.1.0",
    "pyinstaller==6.19.0",
    "pyinstaller-hooks-contrib==2026.4",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
    "testfixtures==11.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["twitchbot", "setup_tokens"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
src = ["src", "tests"]

# Excluded directories and files
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    ".github",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    ".coveragerc",
]

# Formatter Settings
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "ERA001",
    "T201",
    "FBT003",
    "PLR0913",
    "PLR2004",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF100",
    "E741",
    "COM812",
    "TD002",
    "TD003",
    "FIX002",
    "TRY301",
    "TRY400",
    "S101",
    "S105",
    "UP036",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
extend-per-file-ignores = { "tests/**/*" = [
    "INP001",
    "S106",
    "S108",
    "SLF001",
] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = "src"
files = ["src"]
python_version = "3.14"
exclude = ["dic/.*", "tests/.*"]
explicit_package_bases = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = false
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "soundfile.*",
    "sounddevice.*",
    "gtts.*",
    "google.cloud.*",
    "onnxruntime.*",
]
ignore_missing_imports = true
# follow_untyped_imports = true
# follow_imports = "silent"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning",
    "ignore:coroutine .* was never awaited:RuntimeWarning",
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["core", "handlers", "utils", "config", "models"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/site-packages/*",
    "twitchbot.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.basedpyright]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "recommended"
# typeCheckingMode = "basic"

# Rule modification settings.
reportAny = "none"
reportExplicitAny = "none"
reportUnusedCallResult = "none"
reportMissingTypeStubs = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnreachable = "none"
reportMissingTypeArgument = "none"
reportUnusedImport = "hint"
reportUnnecessaryIsInstance = "hint"
reportImportCycles = "hint"
reportImplicitStringConcatenation = "hint"
reportPropertyTypeMismatch = "hint"
# reportImplicitOverride = "warning"
# reportPrivateLocalImportUsage = "warning"
reportUninitializedInstanceVariable = "warning"
reportConstantRedefinition = "warning"

include = ["src"]
ignore = ["tests", ".venv"]

exclude = [
    "uv.lock",
    "**/.*",
    "**/.venv/**",
    "**/__pycache__/**",
    "**/node_modules/**",
    "**/dist/**",
    "**/build/**",
    "**/data/**",
    "**/dic/**",
    "**/*.egg-info/**",
    "**/htmlcov/**",
]
